--- a/app/views/layouts/_stylesheets.html.erb
+++ b/app/views/layouts/_stylesheets.html.erb
@@ -1,5 +1,5 @@
-<script src="/javascripts/bootstrap-scrollspy.js"></script>
-<script src="/javascripts/bootstrap-dropdown.js"></script>
-<script src="/javascripts/core.js"></script>
 <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
 <link rel="stylesheet" href="/stylesheets/core.css">
+<link rel="stylesheet" type="text/css" href="/stylesheets/markitup/style.css" />
+<link rel="stylesheet" type="text/css" href="/stylesheets/markitup/skin/style.css" />
+<link rel="stylesheet" type="text/css" href="/stylesheets/jquery-ui-1.8.17.custom.css" />
