--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,60 +1,21 @@
-<script>
-$(document).ready(function() {
-  $(".progressbar").each(function(){
-    var details = $(this).attr("alt").split("/");
-    var completed = details[0];
-    var total = details[1];
-    if(total != 0){
-      var pb_value = 100 * (completed/total);
-      $(this).progressbar({ value: pb_value });
-    }
-  });
-});
-</script>
-<section>
-  <div style="margin-bottom:20px">
-    <h2 style="margin-bottom: 15px;">My Paths</h2>
-  <% if @enrolled_paths.empty? && @completed_paths.empty? %>
-    <p>You are not currently enrolled in any paths. <%= link_to "Get started!", explore_path %></p>
-  <% elsif @enrolled_paths.empty? && !@completed_paths.empty? %>
-    <p>Congratulations! You've completed all your enrolled paths. <%= link_to "Find more!", explore_path %></p>
-  <% else %>
-    <table class="paths" summary="Users paths">
-      <% @enrolled_paths.each do |path| %>
-        <tr>
-          <td style="vertical-align: middle; width: 70px;"><%= image_tag(path.path_pic, :size=>"70x70", :class=> "thumbnail") %>
-          <td class="path">
-            <h3 class="name"><%= link_to path.name, path %></h3>
-            <p class="description"><%= truncate(strip_tags(path.description), :length => 255) %></p>
-            <script>
-              $(function() {$( "#progressbar_<%= path.id %>" ).progressbar({ value: <%= path.percent_complete(current_user) %> }); });
-            </script>
-            <div style="width:300px;">
-            <div id="progressbar_<%= path.id %>" style="height:.8em;"></div>
-            </div>
-          </td>
-        </tr>
-      <% end %>
-    </table>
-  <% end %>
-  </div>
+<section style="margin-bottom:20px">
+  <%= link_to "Create", new_path_path, :class => "btn secondary", :style => "float: right; margin: 6px 3px 0 0;" %>
+  <%= link_to "Explore", explore_path, :class => "btn primary", :style => "float: right; margin: 6px 10px 0 0;" %>
+  <h2 style="margin-bottom: 15px;">My Paths</h2>
+<% if @enrolled_paths.empty? && @completed_paths.empty? %>
+  <p>You are not currently enrolled in any paths.</p>
+  <%= link_to "Get started!", explore_path, :class => "btn primary" %>
+<% elsif @enrolled_paths.empty? && !@completed_paths.empty? %>
+  <p>Congratulations! You've completed all your enrolled paths.</p>
+<% end %>
+  <%= render "pages/user_progress", { :paths_list => @enrolled_paths } %>
+  <%= render "pages/suggested_paths", {:paths_title => "Recommended for you", :paths_list => @suggested_paths} %>
 </section>
 <section>
   <h2>News</h2>
 <% if @user_achievements.empty? %>
   <p>No news yet today! <%= link_to "Go make some!", explore_path %></p>
 <% else %>
-  <table>
-    <% @user_achievements.each do |ua| %>
-    <tr>
-      <td style="width: 70px; padding: 5px;">
-        <%= image_tag ua.user.profile_pic, :size => "60x60" %>
-      </td>
-      <td>
-        <p><strong><%= link_to ua.user.name, ua.user %></strong> unlocked the <%= link_to ua.achievement.name, ua %> achievement. +<%= ua.achievement.points %></p>
-      </td>
-    </tr>	
-    <% end %>
-  </table>
+  <%= render "pages/user_news", { :user_news => @user_achievements } %>
 <% end %>
 </section>
