--- a/app/views/paths/edit_sections.html.erb
+++ b/app/views/paths/edit_sections.html.erb
@@ -1,13 +1,7 @@
-<h1>Edit Path</h1>
-<ul class="tabs">
-	<li><%= link_to "Content", edit_path_path(@path.id) %></li>
-	<li><%= link_to "Settings", edit_path_path(@path.id, :m=>"settings") %></li>
-	<li class="active"><a href="#">Sections</a></li>
-	<li><%= link_to "Achievements", edit_path_path(@path.id, :m=>"achievements") %></li>
-</ul>
-<section>
+<%= render "tab_navigation" %>
+<section class="tab_content">
   <%= form_tag({:controller => :paths, :action => :reorder_sections}, :method => :put) %>
-  <div style="float: right; display:inline;">
+  <div style="float: right; display:inline; margin-bottom: 10px;">
     <% if @reorder %>
       <%= submit_tag "Save", :class => "btn primary" %>
       <%= link_to "Cancel", edit_path_path(@path.id, :m => "sections"), :class=> "btn secondary" %>
@@ -16,13 +10,16 @@
       <%= link_to "Reorder", edit_path_path(@path.id, :m => "sections", :a => "reorder"), :class=>"btn secondary" %>
     <% end %>
   </div>
-  <h2><%= @path.name %></h2>
   <% if @sections.empty? %>
-    <p style="margin: 30px 0px 200px 0px;">You have not yet created any sections for this Path.</p>
+    <p style="padding:25px;">Paths are broken down into individual sections. Get started by creating your <%= link_to "first section!", new_section_path(:path_id => @path.id) %></p>
   <% else %>
     <table>
     <% @sections.each do |s| %>
-      <tr><td>	
+      <tr>
+        <td style="width: 80px;">
+          <%= image_tag(s.pic, :size => "75x75") %>
+        </td>
+        <td>	
         <h3>
            <%= link_to s.name, edit_section_path(s, :m => "instructions") %>
         </h3>
@@ -56,7 +53,7 @@
     <% end %>
     </table>
   <% end %>
-  <div class="actions">
-    <%= link_to "Back to Path", @path, :class => "btn primary" %>
-  </div>
 </section>
+<div class="actions">
+  <%= link_to "View Path", @path, :class => "btn primary" %>
+</div>
