--- a/app/views/sections/continue.html.erb
+++ b/app/views/sections/continue.html.erb
@@ -1,13 +1,17 @@
 <script>
 $(function() {$("#progressbar").progressbar({ value: <%= @progress %> }); });
 
+<% unless @correct.nil? %>
 $(function() {
   var $correct_status = $("#correct_status");
   var correct = <%= @correct %>;
   if(correct){
-    $correct_status.css("color", "#6AAC2B").text("Correct!").animate({opacity: 0.0}, 6000);
+    $correct_status.css("color", "#6AAC2B").text("Correct!").animate({opacity: 0.0}, 10000);
+  } else {
+    $correct_status.css("color", "#C43C35").text("Incorrect").animate({opacity: 0.0}, 10000);
   }
 });
+<% end %>
 
 $(function(){
   var count = 30;
@@ -33,8 +37,8 @@ $(function(){
     <span class="points streak">+<%= @streak_points %></span>
     <span class="timer">00:30</span>
   </div>
-  <div id="progressbar" style="float:right; margin-right: 10px;"></div>
-  <div id="correct_status" style="float:right; margin-top:10px;"></div>
+  <div id="progressbar" style="float:right; margin-right: 10px;" alt="Progress Bar"></div>
+  <div id="correct_status" style="float:right; margin-top:10px; margin-right: 10px; font-weight: bold;"></div>
 </section>
 <%= form_tag({ :controller => :completed_tasks }, :method => :post) %>
 <div class="task row">
