--- a/public/stylesheets/core.css
+++ b/public/stylesheets/core.css
@@ -1,4 +1,7 @@
 #content { padding-top: 75px; }
+.tab_header h1 { padding: 4px 0px 0px 0px; margin-left: 50px; }
+.tab_header img { float:left; width: 40px; height: 40px; }
+.tab_content { min-height: 300px; }
 
 /* Section Continue */
 .progress-box { margin-bottom: 40px; font-size: 22px;  }
@@ -15,6 +18,13 @@
 .path .description p { font-size: 15px; padding: 10px; }
 .section-caption { display: inline; z-index: 1000; float: left; position: absolute; width: 155px; margin-left: -5px; background-color: slategray; font-size: 16px; color: whitesmoke; padding: 8px; margin-top: 60px; }
 .path-caption { display: inline; z-index: 1000; float: left; position: absolute; width: 204px; background-color: slategray; color: whitesmoke; padding: 3px 8px 3px 8px; margin: 100px 0 0 -5px; height: 35px; }
+.completion img,.completionh1 h1,.completion h4,.completion a { display: inline; }
+.completion a { margin: 30px 20px 0px 0px; }
+.suggested-paths { margin-bottom: 15px; }
+.suggested-paths img { height: 150px; width: 210px; }
+.suggested-paths ul { margin-top: 5px; }
+.suggested-paths h2  { display: inline; }
+.suggested-paths span { float:right; padding-top:10px; font-style: italic; font-size: 14px; }
 
 /* Task */
 .task ol { margin: 0px 0px 9px 40px; }
@@ -48,7 +58,7 @@ div.field, div.action { margin-bottom: 10px; }
 #dashboard tbody tr:nth-child(even) td, tbody tr.even td { background: transparent; }
 
 /* Research */
-section.wiki { padding-top: 50px; }
+section.wiki { margin-bottom: 50px; }
 .wiki h1 { font-size: 28px; background-color: whitesmoke; padding:10px; }
 .wiki h2 { font-size: 18px; }
 .wiki .thumb { margin: 10px; float:right; }
@@ -59,6 +69,7 @@ section.wiki { padding-top: 50px; }
 #articles { margin-bottom: 30px; }
 .article { padding-top: 50px; }
 .editor input[type="checkbox"]{ width:auto; margin-top:10px; }
+#doc_root { min-height: 400px; }
 
 /* Explore */
 #path_explore h2 { float: left; text-transform: uppercase; font-size: 19px; font-weight: bold; color: slategray; }
