Fixed a few bugs but mostly test case fixes. Build green.

--- a/app/views/tours/user_tour.html.erb
+++ b/app/views/tours/user_tour.html.erb
@@ -114,7 +114,7 @@
 			<ol>
 				<li>
 					<p>Enroll in a Path.</p>
-					<%= link_to "View Paths", paths_path, :class => "btn secondary" %>
+					<%= link_to "View Paths", explore_path, :class => "btn secondary" %>
 				</li>
 				<li>
 					<p>Visit the home page to see what others in your account are up to.</p>
