--- a/app/views/pages/explore.html.erb
+++ b/app/views/pages/explore.html.erb
@@ -26,7 +26,7 @@
     <% all_paths.each_index do |pp| %>
       <% if pp >= 12 && @display_all then break end %>
       <li>
-        <a href="<%= path_path(all_paths[pp]) %>">
+        <a href="<%= path_path(all_paths[pp]) %>" id="<%= all_paths[pp].name.gsub(" ", "_") %>">
           <div class="path-caption">
             <span class="caption-title"><%= truncate(all_paths[pp].name, :length => 35) %></span><br>
             <span style="font-size: 10px; float: left;">237 Enrolled</span>
