--- a/app/views/sections/new.html.erb
+++ b/app/views/sections/new.html.erb
@@ -5,13 +5,13 @@
     <%= render "shared/error_messages", :object => f.object %>
     <%= f.hidden_field :path_id, :value => @path_id %><br/>
     <div class="field">
-      <label>Section Name</label>
+      <label for="section_name">Section Name</label>
       <div class="input">
         <%= f.text_field :name, :class => "xlarge" %>
       </div>
     </div>
     <div class="field clearfix">
-      <label>Picture URL</label>
+      <label for="section_image_url">Picture URL</label>
       <div class="input">
         <%= f.text_field :image_url, :id => "image_url_input", :class=>"xxlarge", :placeholder => "optional..." %>
       </div>
