--- a/app/views/paths/_tab_navigation.html.erb
+++ b/app/views/paths/_tab_navigation.html.erb
@@ -15,6 +15,9 @@
       <li <% if @mode == "settings" %> class="active" <% end %>>
         <%= link_to "Settings", edit_path_path(@path.id, :m=>"settings") %>
       </li>
+      <li style="float:right;">
+        <%= link_to "View Path", @path %>
+      </li>
     </ul>
   </div>
 </section>
