--- a/app/views/sections/edit_tasks.html.erb
+++ b/app/views/sections/edit_tasks.html.erb
@@ -9,6 +9,7 @@
     <% else %>
       <%= link_to "New Task", new_task_path(:section_id => @section.id), :class=>"btn primary" %>
       <%= link_to "Reorder", edit_section_path(@section.id, :m => "tasks", :a => "reorder"), :class=>"btn secondary" %>
+      <%= link_to "Generate", questions_section_path(@section), :class=>"btn secondary" %>
     <% end %>
 	</div>
 	<% if @tasks.empty? %>
