Added feature turnoffs for leaderboard, dashboard and tours.

--- a/app/views/companies/edit.html.erb
+++ b/app/views/companies/edit.html.erb
@@ -23,6 +23,24 @@
 								<span>Enable Company Store</span>
 							</label>
 						</li>
+            <li>
+							<label>
+								<%= f.check_box :enable_leaderboard %>
+								<span>Enable Leaderboard</span>
+							</label>
+						</li>
+            <li>
+							<label>
+								<%= f.check_box :enable_dashboard %>
+								<span>Enable Dashboard</span>
+							</label>
+						</li>
+            <li>
+							<label>
+								<%= f.check_box :enable_tour %>
+								<span>Enable Tour</span>
+							</label>
+						</li>
 					</ul>
 				</div>
 			</div>
