--- a/app/views/paths/_tab_navigation.html.erb
+++ b/app/views/paths/_tab_navigation.html.erb
@@ -16,7 +16,7 @@
         <%= link_to "Settings", edit_path_path(@path.id, :m=>"settings") %>
       </li>
       <li style="float:right;">
-        <%= link_to "View Path", @path %>
+        <%= link_to "View Path", @path, :style => "background-color:whitesmoke;" %>
       </li>
     </ul>
   </div>
