--- a/app/views/sections/_tab_navigation.html.erb
+++ b/app/views/sections/_tab_navigation.html.erb
@@ -16,7 +16,7 @@
         <%= link_to "Settings", edit_section_path(@section.id, :m => "settings") %>
       </li>
       <li style="float:right;">
-        <%= link_to "Back to Path", edit_path_path(@section.path.id, :m => "sections") %>
+        <%= link_to "Back to Path", edit_path_path(@section.path.id, :m => "sections"), :style => "background-color:whitesmoke;" %>
       </li>
     </ul>
   </div>
