--- a/app/views/sections/new.html.erb
+++ b/app/views/sections/new.html.erb
@@ -14,6 +14,7 @@
       <label for="section_image_url">Picture URL</label>
       <div class="input">
         <%= f.text_field :image_url, :id => "image_url_input", :class=>"xxlarge", :placeholder => "optional..." %>
+        <a class="btn secondary" style="margin-left:10px;">Preview</a>
       </div>
     </div>
     <div class="field clearfix">
