--- a/app/views/sections/questions.html.erb
+++ b/app/views/sections/questions.html.erb
@@ -25,7 +25,7 @@ $(function(){
 .question_set li:hover { background-color:whitesmoke; }
 .question_set li input { width:550px; line-height:22px; margin-right:10px; }
 .question_set li input,span { margin-right:10px; }
-.question_set .delete { float:right; margin-right:6px; margin-top:4px; }
+.question_set .delete, .question_set .edit { float:right; margin-right:6px; margin-top:4px; }
 #loading_status { padding: 30px; }
 </style>
 <section>
