--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,6 +6,7 @@
 				<% if signed_in? %>
 				<ul>
 					<li><%= link_to "Explore", explore_path %></li>
+          <li><%= link_to "Create", new_path_path %></li>
 					<li>
             <a href="<%= user_url(current_user) %>">
               <%= image_tag current_user.profile_pic, :size => "18x18", :style => "display:inline; float:left; margin-right: 5px;" %>
@@ -16,19 +17,27 @@
 						<li><%= link_to "Rewards", rewards_path %></li>
 					<% end %>
 					<% if current_user.company_admin? %>
-						<li><%= link_to "Account", current_user.company %></li>
+						<li><%= link_to "Administration", current_user.company %></li>
+            <% if current_user.company.enable_dashboard %>
 						<li><%= link_to "Dashboard", dashboard_path %></li>
+            <% end %>
 					<% end %>
-          <li><%= link_to "Leaderboard", leaderboards_path %></li>
+          <% if current_user.company.enable_leaderboard %>
+            <li><%= link_to "Leaderboard", leaderboards_path %></li>
+          <% end %>
 				</ul>
 				<% end %>
 				<ul class="nav secondary-nav">
 					<% if signed_in? %>
-					<li><% if current_user.company_admin? %>
-						<%= link_to "Take the tour", tours_path %></li>
-						<% else %>
-						<%= link_to "Take the tour", user_tour_tour_path(1) %></li>
-						<% end %>
+            <% if current_user.company.enable_tour %>
+            <li>
+              <% if current_user.company_admin? %>
+              <%= link_to "Take the tour", tours_path %>
+              <% else %>
+              <%= link_to "Take the tour", user_tour_tour_path(1) %>
+              <% end %>
+            </li>
+            <% end %>
 					<li><%= link_to "Sign out", signout_path, :method => :delete %></li>
 					<% else %>
 					<li ><%= link_to "Sign in", signin_path %></li>
