Fixed info resources.

--- a/app/views/info_resources/new.html.erb
+++ b/app/views/info_resources/new.html.erb
@@ -7,7 +7,7 @@ For example, if its type is a video and the link is for Youtube, the resource wi
 	<div class="field clearfix">
 		<%= f.label :description %>
 		<div class="input">
-			<%= f.text_area :description, :class => "xxlarge", :rows => "3" %>
+			<%= f.text_area :description, :class => "xxlarge", :rows => "3", :placeholder => "optional..." %>
 		</div>
 	</div>
 	<div class="field">
